# freeform-rpg

./: .gitignore  Alexandrian_Gamemastery_101.md  CLAUDE.md  README.md  pyproject.toml  spec.json
content_packs/undercity_sourcebook/: pack.yaml
docs/: BACKLOG.md  COMPETITIVE_ANALYSIS.md  FINAL_AUDIT.md  GM_GUIDANCE_GAPS.md  GM_KNOWLEDGE_COVERAGE.md  GM_WORKFLOW_COVERAGE.md  HLD.md  IMPLEMENTATION_PLAN.md  PRD.md  SESSION_ZERO_DESIGN.md  SYSTEM_ADAPTER_DESIGN.md  TDD.md  USAGE.md  content_pack_howto.md  fail_cases.md
docs/gm_reference/: GM_REFERENCE_AUDIT.md  PERCEPTION_DESIGN.md  dont_prep_plots.txt  game_structures.txt  gamemastering.txt  node_based.txt  prep_tips.txt  secret_life_of_nopdes.txt  three_clue.txt
scenarios/: dead_drop.yaml  magetheascension_test.yaml
src/: __main__.py  config.py
src/cli/: __main__.py  guided.py  ingest_flow.py  main.py  spinner.py  vibe_check.py
src/content/: __init__.py  chunker.py  indexer.py  pack_loader.py  retriever.py  scene_cache.py  session_manager.py  vector_store.py
src/context/: builder.py
src/core/: __init__.py  clock_config.py  orchestrator.py  resolver.py  system_config.py  validator.py
src/db/: schema.sql  schema_v1.sql  state_store.py
src/eval/: __init__.py  evaluation.py  replay.py  snapshots.py
src/ingest/: __init__.py  assemble.py  audit.py  classify.py  enrich.py  extract.py  gm_guidance_extract.py  models.py  pack_test.py  pipeline.py  segment.py  sphere_extract.py  structure.py  systems_assemble.py  systems_config.py  (+5 more)
systems/: _base.yaml  world_of_darkness.yaml
tests/: __init__.py  conftest.py
(+120 files in other folders)
